--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ author:
   googlescholar    : "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
   email            : "2111294@tongji.edu.cn"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
-  uri              : 
+  uri              : "resume_Wang.pdf"
   bitbucket        :
   codepen          :
   dribbble         :
